// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`solid/text-align > commands 1`] = `
"
<h1 style="text-align: center;">
  Heading
</h1>
<p style="text-align: left;">
  First paragraph
</p>
<p style="text-align: center;">
  Second paragraph
</p>
<p style="text-align: right;">
  Third paragraph
</p>
"
`;

exports[`solid/text-align > commands 2`] = `
"
<h1 style="text-align: left;">
  Heading
</h1>
<p style="text-align: left;">
  First paragraph
</p>
<p style="text-align: center;">
  Second paragraph
</p>
<p style="text-align: right;">
  Third paragraph
</p>
"
`;

exports[`solid/text-align > commands 3`] = `
"
<h1 style="text-align: right;">
  Heading
</h1>
<p style="text-align: left;">
  First paragraph
</p>
<p style="text-align: center;">
  Second paragraph
</p>
<p style="text-align: right;">
  Third paragraph
</p>
"
`;

exports[`solid/text-align > inheritance 1`] = `
"
<h1 style="text-align: center;">
  H1
</h1>
<p style="text-align: center;">
  Paragraph
</p>
"
`;

exports[`svelte/text-align > commands 1`] = `
"
<h1 style="text-align: center;">
  Heading
</h1>
<p style="text-align: left;">
  First paragraph
</p>
<p style="text-align: center;">
  Second paragraph
</p>
<p style="text-align: right;">
  Third paragraph
</p>
"
`;

exports[`svelte/text-align > commands 2`] = `
"
<h1 style="text-align: left;">
  Heading
</h1>
<p style="text-align: left;">
  First paragraph
</p>
<p style="text-align: center;">
  Second paragraph
</p>
<p style="text-align: right;">
  Third paragraph
</p>
"
`;

exports[`svelte/text-align > commands 3`] = `
"
<h1 style="text-align: right;">
  Heading
</h1>
<p style="text-align: left;">
  First paragraph
</p>
<p style="text-align: center;">
  Second paragraph
</p>
<p style="text-align: right;">
  Third paragraph
</p>
"
`;

exports[`svelte/text-align > inheritance 1`] = `
"
<h1 style="text-align: center;">
  H1
</h1>
<p style="text-align: center;">
  Paragraph
</p>
"
`;

exports[`vue/text-align > commands 1`] = `
"
<h1 style="text-align: center;">
  Heading
</h1>
<p style="text-align: left;">
  First paragraph
</p>
<p style="text-align: center;">
  Second paragraph
</p>
<p style="text-align: right;">
  Third paragraph
</p>
"
`;

exports[`vue/text-align > commands 2`] = `
"
<h1 style="text-align: left;">
  Heading
</h1>
<p style="text-align: left;">
  First paragraph
</p>
<p style="text-align: center;">
  Second paragraph
</p>
<p style="text-align: right;">
  Third paragraph
</p>
"
`;

exports[`vue/text-align > commands 3`] = `
"
<h1 style="text-align: right;">
  Heading
</h1>
<p style="text-align: left;">
  First paragraph
</p>
<p style="text-align: center;">
  Second paragraph
</p>
<p style="text-align: right;">
  Third paragraph
</p>
"
`;

exports[`vue/text-align > inheritance 1`] = `
"
<h1 style="text-align: center;">
  H1
</h1>
<p style="text-align: center;">
  Paragraph
</p>
"
`;
